@@ -57,6 +57,9 @@ using ola::network::NetworkToHost;
 using ola::rdm::LoadSensor;
 using ola::rdm::NR_DATA_OUT_OF_RANGE;
 using ola::rdm::NR_FORMAT_ERROR;
+using ola::rdm::Personality;
+using ola::rdm::PersonalityCollection;
+using ola::rdm::PersonalityManager;
 using ola::rdm::RDMCallback;
 using ola::rdm::RDMCommand;
 using ola::rdm::RDMRequest;
@@ -145,18 +148,21 @@ SPIOutput::SPIOutput(const UID &uid, SPIBackendInterface *backend,
   if (pos != string::npos)
     m_spi_device_name = device_path.substr(pos + 1);
 
-  m_personality_manager.AddPersonality(m_pixel_count * WS2801_SLOTS_PER_PIXEL,
-                                       "WS2801 Individual Control");
-  m_personality_manager.AddPersonality(WS2801_SLOTS_PER_PIXEL,
-                                       "WS2801 Combined Control");
-  m_personality_manager.AddPersonality(m_pixel_count * LPD8806_SLOTS_PER_PIXEL,
-                                       "LPD8806 Individual Control");
-  m_personality_manager.AddPersonality(LPD8806_SLOTS_PER_PIXEL,
-                                       "LPD8806 Combined Control");
-  m_personality_manager.AddPersonality(m_pixel_count * P9813_SLOTS_PER_PIXEL,
-                                       "P9813 Individual Control");
-  m_personality_manager.AddPersonality(P9813_SLOTS_PER_PIXEL,
-                                       "P9813 Combined Control");
+  PersonalityCollection::PersonalityList personalities;
+  personalities.push_back(Personality(m_pixel_count * WS2801_SLOTS_PER_PIXEL,
+                                      "WS2801 Individual Control"));
+  personalities.push_back(Personality(WS2801_SLOTS_PER_PIXEL,
+                                      "WS2801 Combined Control"));
+  personalities.push_back(Personality(m_pixel_count * LPD8806_SLOTS_PER_PIXEL,
+                                      "LPD8806 Individual Control"));
+  personalities.push_back(Personality(LPD8806_SLOTS_PER_PIXEL,
+                                      "LPD8806 Combined Control"));
+  personalities.push_back(Personality(m_pixel_count * P9813_SLOTS_PER_PIXEL,
+                                      "P9813 Individual Control"));
+  personalities.push_back(Personality(P9813_SLOTS_PER_PIXEL,
+                                      "P9813 Combined Control"));
+  m_personality_manager = PersonalityManager(
+      new PersonalityCollection(personalities));
   m_personality_manager.SetActivePersonality(1);
 
 #ifdef HAVE_GETLOADAVG
@@ -439,17 +445,11 @@ uint8_t SPIOutput::P9813CreateFlag(uint8_t red, uint8_t green, uint8_t blue) {
 }
 
 const RDMResponse *SPIOutput::GetDeviceInfo(const RDMRequest *request) {
-  uint16_t footprint = m_personality_manager.ActivePersonalityFootprint();
-  if (request->ParamDataSize()) {
-    return NackWithReason(request, NR_FORMAT_ERROR);
-  }
   return ResponderHelper::GetDeviceInfo(
       request, ola::rdm::OLA_SPI_DEVICE_MODEL,
       ola::rdm::PRODUCT_CATEGORY_FIXTURE, 2,
-      footprint,
-      m_personality_manager.ActivePersonalityNumber(),
-      m_personality_manager.PersonalityCount(),
-      footprint ? m_start_address : ola::rdm::ZERO_FOOTPRINT_DMX_ADDRESS,
+      &m_personality_manager,
+      m_start_address,
       0, m_sensors.size());
 }
 
@@ -483,95 +483,28 @@ const RDMResponse *SPIOutput::GetSoftwareVersionLabel(
 }
 
 const RDMResponse *SPIOutput::GetDmxPersonality(const RDMRequest *request) {
-  if (request->ParamDataSize()) {
-    return NackWithReason(request, NR_FORMAT_ERROR);
-  }
-
-  struct personality_info_s {
-    uint8_t personality;
-    uint8_t total;
-  } __attribute__((packed));
-
-  struct personality_info_s personality_info = {
-    m_personality_manager.ActivePersonalityNumber(),
-    m_personality_manager.PersonalityCount()
-  };
-  return GetResponseFromData(
-    request,
-    reinterpret_cast<const uint8_t*>(&personality_info),
-    sizeof(personality_info));
+  return ResponderHelper::GetPersonality(request, &m_personality_manager);
 }
 
 const RDMResponse *SPIOutput::SetDmxPersonality(const RDMRequest *request) {
-  uint8_t personality_number;
-  if (!ResponderHelper::ExtractUInt8(request, &personality_number)) {
-    return NackWithReason(request, NR_FORMAT_ERROR);
-  }
-
-  const Personality *personality = m_personality_manager.Lookup(
-      personality_number);
-
-  if (!personality) {
-    return NackWithReason(request, NR_DATA_OUT_OF_RANGE);
-  }
-  if (m_start_address + personality->footprint() - 1 > DMX_UNIVERSE_SIZE) {
-    return NackWithReason(request, NR_DATA_OUT_OF_RANGE);
-  }
-
-  m_personality_manager.SetActivePersonality(personality_number);
-  return ResponderHelper::EmptySetResponse(request);
+  return ResponderHelper::SetPersonality(request, &m_personality_manager,
+                                         m_start_address);
 }
 
 const RDMResponse *SPIOutput::GetPersonalityDescription(
     const RDMRequest *request) {
-  uint8_t personality_number;
-  if (!ResponderHelper::ExtractUInt8(request, &personality_number)) {
-    return NackWithReason(request, NR_FORMAT_ERROR);
-  }
-
-  const Personality *personality = m_personality_manager.Lookup(
-      personality_number);
-  if (!personality) {
-    return NackWithReason(request, NR_DATA_OUT_OF_RANGE);
-  }
-
-  struct personality_description_s {
-    uint8_t personality;
-    uint16_t slots_required;
-    char description[32];
-  } __attribute__((packed));
-
-  struct personality_description_s personality_description = {
-    personality_number, HostToNetwork(personality->footprint()), ""
-  };
-  strncpy(personality_description.description,
-          personality->description().c_str(),
-          sizeof(personality_description.description));
-
-  return GetResponseFromData(
-      request,
-      reinterpret_cast<uint8_t*>(&personality_description),
-      sizeof(personality_description));
+  return ResponderHelper::GetPersonalityDescription(
+      request, &m_personality_manager);
 }
 
 const RDMResponse *SPIOutput::GetDmxStartAddress(const RDMRequest *request) {
-  return ResponderHelper::GetUInt16Value(
-    request,
-    ((m_personality_manager.ActivePersonalityFootprint() == 0) ?
-     ola::rdm::ZERO_FOOTPRINT_DMX_ADDRESS : m_start_address));
+  return ResponderHelper::GetDmxAddress(request, &m_personality_manager,
+                                        m_start_address);
 }
 
 const RDMResponse *SPIOutput::SetDmxStartAddress(const RDMRequest *request) {
-  uint16_t address;
-  if (!ResponderHelper::ExtractUInt16(request, &address)) {
-    return NackWithReason(request, NR_FORMAT_ERROR);
-  }
-  if (!SetStartAddress(address)) {
-    return NackWithReason(request, NR_DATA_OUT_OF_RANGE);
-  }
-
-  m_start_address = address;
-  return ResponderHelper::EmptySetResponse(request);
+  return ResponderHelper::SetDmxAddress(request, &m_personality_manager,
+                                        &m_start_address);
 }
 
 const RDMResponse *SPIOutput::GetIdentify(const RDMRequest *request) {
